<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_sendPassword"
            android:icon="@android:drawable/ic_lock_idle_lock"
            android:title="@string/menu_sendPassword" />
        <item
            android:id="@+id/nav_cekSaldo"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/menu_cekSaldo" />
        <item
            android:id="@+id/nav_keluhan"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_keluhan" />
        <item
            android:id="@+id/nav_print"
            android:icon="?attr/actionModePasteDrawable"
            android:title="@string/menu_print" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_24dp"
            android:title="@string/menu_logout" />
    </group>
</menu>