<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.adminsampah.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_sendPassword"
        android:name="com.example.adminsampah.ui.main.SendPasswordFragment"
        android:label="@string/menu_sendPassword"
        tools:layout=/>

    <fragment
        android:id="@+id/nav_cekSaldo"
        android:name="com.example.adminsampah.ui.history.CekSaldoFragment"
        android:label="@string/menu_cekSaldo"
        tools:layout="" />

    <fragment
        android:id="@+id/nav_keluhan"
        android:name="com.example.adminsampah.ui.main.KeluhanFragment"
        android:label="@string/menu_keluhan"
        tools:layout="@layout/fragment_keluhan" />
</navigation>